# bitcoin-bot-gmo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  serena-instructions.md
configs/: runtime.example.yaml  runtime.live.leverage.yaml  runtime.live.spot.yaml
docs/: api_contracts.md  architecture.md  copilot_prompt_templates_ja.md  exchange_spot_leverage_matrix.md  initial_skeleton.md  k8s_runbook.md  monitoring.md  operations.md  release_signoff_template.md  run_complete_schema.md  spec.md
scripts/: alerts_sanity_check.sh  go_live_prep.sh  go_nogo_gate.sh  live_connectivity_drill.sh  monthly_report.sh  release_check.sh  replay_check.sh  rotate_secrets_check.sh  run_backtest.py  run_live.py  smoke_live_daemon.sh  soak_24h_gate.sh
tests/: conftest.py  test_audit_log_contract.py  test_audit_log_rotation.py  test_backtest_data_driven_metrics.py  test_backtest_data_quality_mode.py  test_backtest_metrics_contract.py  test_config_validation.py  test_discord_non_fatal.py  test_exchange_error_normalization.py  test_exchange_order_http_runtime.py  test_exchange_private_retry_policy.py  test_exchange_protocol.py  test_exchange_read_fallback_contract.py  test_exchange_read_models_runtime.py  test_exchange_runtime_integration.py  test_exchange_stream_runtime.py  test_exchange_ws_runtime.py  test_execute_orders_flag.py  test_indicator_contract.py  test_live_execute_orders_flow.py  test_live_failover_scenarios.py  test_live_http_switching.py  test_live_monitor_contract.py  (+20 more)
(+32 files in other folders)
